kubernetes/base/elodin-vms/sim-agent-balloon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sim-agent-balloon
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sim-agent-balloon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sim-agent-balloon
    spec:
      priorityClassName: placeholder-priority
      terminationGracePeriodSeconds: 0
      containers:
      - name: sim-agent-balloon
        image: elodin-infra/elo-sim-agent:latest
        command: ["sleep"]
        args: ["infinity"]
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            dev/kvm: 1
            dev/vhost-vsock: 1
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
